Added in new hero 13 with background image

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -33,7 +33,9 @@
                         </div>
                         <footer>
                             <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
-                            <div><a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a><a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
+                            <div>
+                                <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
+                                <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
                             </div>
                         </footer>                         
                     </div>
@@ -86,7 +88,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -141,7 +144,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -195,7 +199,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -240,7 +245,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -298,7 +304,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -331,7 +338,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -369,7 +377,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -395,8 +404,7 @@ Focus on retaining candidates and clients.</strong></p>
                         <div class="mb-4 mt-4 pb-3 pd-hero-9-text-outer pt-3">
                             <h1>SEO Optimized H1</h1>
                             <p class="pd-hero-9-headline">Nice big marketing headline</p>
-                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p>
-                            <a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
+                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p><a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
                         </div>                         
                     </div>
                     <div class="col-md-6 overflow-hidden pd-hero-9-col-image pe-0 pe-md-2 ps-0 ps-md-2">
@@ -443,9 +451,7 @@ Focus on retaining candidates and clients.</strong></p>
                             <h1>Freelance Web Developer UK</h1>
                             <p class="pd-hero-10-headline"><strong>Profitable Solutions</strong></p>
                             <p class="pd-hero-10-subheadline">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
-                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center">
-                                <a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a>
-                                <a href="#" name="anchor" class="mb-lg-1 me-lg-1 ms-md-2 mt-lg-1  pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
+                            <div class="align-items-center d-flex flex-column flex-md-row justify-content-center"><a href="#" name="anchor" class="m-1 pd-hero-10-btn">Book Free Consultation</a><a href="#" name="anchor" class="mb-lg-1 me-lg-1 ms-md-2 mt-lg-1  pd-hero-10-btn-light pt-2 pt-md-0">Find out more</a>
                             </div>
                         </div>                         
                     </div>
@@ -466,9 +472,7 @@ Focus on retaining candidates and clients.</strong></p>
                             <h1>Freelance web developer uk</h1>
                             <p class="pd-hero-11-headline"><strong>Profitable web solutions</strong></p>
                             <p class="pd-hero-11-subHeadline">We help your business become more profitable through effective use of the web. Performant, cutting edge tech, safely tested and accessible.</p>
-                            <div class="align-items-center align-items-md-start d-flex flex-column justify-content-start">
-                                <a href="#" name="anchor" class="pd-hero-11-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book free consultation</a>
-                                <a href="#" name="anchor" class="pd-hero-11-btn-light">Find out more</a>
+                            <div class="align-items-center align-items-md-start d-flex flex-column justify-content-start"><a href="#" name="anchor" class="pd-hero-11-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book free consultation</a><a href="#" name="anchor" class="pd-hero-11-btn-light">Find out more</a>
                             </div>
                         </div>                         
                     </div>
@@ -507,7 +511,9 @@ Focus on retaining candidates and clients.</strong></p>
                         <div class="pd-hero-12-subHeadline">
                             <p>More than 30 years combined coding experience. Looking forward to discussing your web project to see how we can help.</p>
                         </div>
-                        <footer class="align-items-center align-items-lg-center d-flex flex-column flex-lg-row justify-content-lg-start justify-content-start pt-2"><a href="#" name="anchor" class="btn btn-primary mb-3 mb-lg-0 mt-lg-0 pd-hero-12-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book Free Consultation</a><a href="#" name="anchor" class="pd-hero-12-btn-light">Learn More</a>
+                        <footer class="align-items-center align-items-lg-center d-flex flex-column flex-lg-row justify-content-lg-start justify-content-start pt-2">
+                            <a href="#" name="anchor" class="btn btn-primary mb-3 mb-lg-0 mt-lg-0 pd-hero-12-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book Free Consultation</a>
+                            <a href="#" name="anchor" class="pd-hero-12-btn-light">Learn More</a>
                         </footer>                         
                     </div>
                     <div class="col-lg-6 p-0" style="position: relative;">
@@ -554,9 +560,7 @@ Focus on retaining candidates and clients.</strong></p>
                             <div class="pd-hero-13-subHeadline">
                                 <p>Two web freelancers with more than 30 years combined coding experience. Looking forward to discussing your web project to see how we can help.</p>
                             </div>
-                            <footer class="align-items-center align-items-lg-center d-flex flex-column flex-lg-row justify-content-lg-start justify-content-start pt-2">
-                                <a href="#" name="anchor" class="btn btn-primary mb-3 mb-lg-0 mt-lg-0 pd-hero-13-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book Free Consultation</a>
-                                <a href="#" name="anchor" class="pd-hero-13-btn-light">Learn More</a>
+                            <footer class="align-items-center align-items-lg-center d-flex flex-column flex-lg-row justify-content-lg-start justify-content-start pt-2"><a href="#" name="anchor" class="btn btn-primary mb-3 mb-lg-0 mt-lg-0 pd-hero-13-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book Free Consultation</a><a href="#" name="anchor" class="pd-hero-13-btn-light">Learn More</a>
                             </footer>
                         </div>                         
                     </div>
