Added in Claude fixes but still doesn't wrap text

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -33,23 +33,28 @@
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false"><span class="pd-tabs-1-tri"></span>Itinerary
+                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Itinerary
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false"><span class="pd-tabs-1-tri"></span>Price
+                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Price
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false"><span class="pd-tabs-1-tri"></span>Includes
+                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Includes
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false"><span class="pd-tabs-1-tri"></span>Faq
+                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Faq
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false"><span class="pd-tabs-1-tri"></span>Extensions
+                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Extensions
                                     </button>
                                 </li>
                             </ul>
@@ -63,8 +68,7 @@
                                     </div>
                                     <div class="pd-tabs-1-panels-outer">
                                         <article class="pd-tabs-1-panels-card">
-                                            <header>
-                                                <a href="#"><h3>Day 1: Arrival in Munich</h3></a>
+                                            <header><a href="#"><h3>Day 1: Arrival in Munich</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-1" aria-expanded="true" aria-controls="panel-1">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
