Added in final styling for timeline collapse tab

--- a/_factory_tabs.html
+++ b/_factory_tabs.html
@@ -33,23 +33,28 @@
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false"><span class="pd-tabs-1-tri"></span>Itinerary
+                                    <button class="nav-link" id="pills-itinerary-tab" data-bs-toggle="pill" data-bs-target="#pills-itinerary" type="button" role="tab" aria-controls="pills-itinerary" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Itinerary
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false"><span class="pd-tabs-1-tri"></span>Price
+                                    <button class="nav-link" id="pills-price-tab" data-bs-toggle="pill" data-bs-target="#pills-price" type="button" role="tab" aria-controls="pills-price" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Price
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false"><span class="pd-tabs-1-tri"></span>Includes
+                                    <button class="nav-link" id="pills-includes-tab" data-bs-toggle="pill" data-bs-target="#pills-includes" type="button" role="tab" aria-controls="pills-includes" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Includes
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false"><span class="pd-tabs-1-tri"></span>Faq
+                                    <button class="nav-link" id="pills-faq-tab" data-bs-toggle="pill" data-bs-target="#pills-faq" type="button" role="tab" aria-controls="pills-faq" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Faq
                                     </button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false"><span class="pd-tabs-1-tri"></span>Extensions
+                                    <button class="nav-link" id="pills-extensions-tab" data-bs-toggle="pill" data-bs-target="#pills-extensions" type="button" role="tab" aria-controls="pills-extensions" aria-selected="false">
+                                        <span class="pd-tabs-1-tri"></span>Extensions
                                     </button>
                                 </li>
                             </ul>
@@ -63,8 +68,7 @@
                                     </div>
                                     <div class="pd-tabs-1-panels-outer">
                                         <article class="pd-tabs-1-panels-card">
-                                            <header>
-                                                <a href="#"><h3>Day 1: Arrival in Munich</h3></a>
+                                            <header><a href="#panel-1" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="panel-1"><h3>Day 1: Arrival in Munich</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-1" aria-expanded="true" aria-controls="panel-1">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -72,7 +76,7 @@
                                                     <img alt="location icon" width="24" height="24" loading="lazy" src="images/design-assets/location_on_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </div>
                                             </header>
-                                            <div class="collapse" id="panel-1">
+                                            <div class="collapse show" id="panel-1">
                                                 <div class="pd-tabs-1-panels-card-body">
                                                     <div class="pd-tabs-1-panels-card-img-outer">
                                                         <img class="img-fluid" src="images/uploads/hero-alpine-820.jpg">
@@ -99,8 +103,7 @@
                                             </div>
                                         </article>
                                         <article class="pd-tabs-1-panels-card">
-                                            <header>
-                                                <a href="#"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
+                                            <header><a href="#panel-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-2"><h3>Day 2: The picturesque Salzkammergut lake district</h3></a>
                                                 <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-2" aria-expanded="true" aria-controls="panel-2">
                                                     <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
                                                 </button>
@@ -108,6 +111,41 @@
 </div>
                                             </header>
                                             <div class="collapse" id="panel-2">
+                                                <div class="pd-tabs-1-panels-card-body">
+                                                    <div class="pd-tabs-1-panels-card-img-outer">
+                                                        <img class="img-fluid" src="images/uploads/hero-alpine-820.jpg">
+                                                    </div>
+                                                    <div class="pd-tabs-1-panels-card-txt">
+                                                        <p>The lake district east of Salzburg is a combination of wonderful scenery and picturesque villages. We&apos;ll see the Red Bull HQ at Lake Fuschl, have a boat ride across another lake to the quaint village of St. Wolfgang and visit iconic Hallstatt, where we take the funicular up for a panoramic view of the lake and optional salt mine tour.</p>
+                                                    </div>
+                                                </div>
+                                                <footer>
+                                                    <div class="d-flex flex-row pd-tabs-1-panels-card-footnote">
+                                                        <div class="pd-tabs-1-panels-card-footnote-label">
+                                                            <p>Included:  </p>
+                                                        </div>
+                                                        <p>door-to-door transportation; walking tour of Salzburg; Lift to panorama view point; Welcome Dinner.</p>
+                                                    </div>
+                                                    <div class="d-flex flex-row pd-tabs-1-panels-card-footnote">
+                                                        <div class="pd-tabs-1-panels-card-footnote-label">
+                                                            <p>Excluded</p>
+                                                        </div>
+                                                        <p>Vivamus tempus nulla ac euismod fermentum. Nam interdum commodo facilisis. Curabitur ut leo tellus.</p>
+                                                    </div>
+                                                    <hr>
+                                                </footer>
+                                            </div>
+                                        </article>
+                                        <article class="pd-tabs-1-panels-card">
+                                            <header>
+                                                <a href="#panel-3" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="panel-3"><h3>Day 3:&nbsp;Cras tincidunt dolor vitae quam suscipit</h3></a>
+                                                <button type="button" data-bs-toggle="collapse" data-bs-target="#panel-3" aria-expanded="true" aria-controls="panel-3">
+                                                    <img src="/images/design-assets/expand_circle_down_24dp_44687E_FILL0_wght400_GRAD0_opsz24.svg">
+                                                </button>
+                                                <div class="pd-tabs-1-panels-card-circle">
+</div>
+                                            </header>
+                                            <div class="collapse" id="panel-3">
                                                 <div class="pd-tabs-1-panels-card-body">
                                                     <div class="pd-tabs-1-panels-card-img-outer">
                                                         <img class="img-fluid" src="images/uploads/hero-alpine-820.jpg">
